<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  >
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">
  <TextView
  	android:id="@+id/Introduction"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:paddingLeft="8dp"
  	android:paddingRight="8dp"
  	android:text="@string/dialog_first_launch_introduction"
  />
  <ImageView
  	android:id="@+id/Demo1"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/Introduction"
  	android:src="@drawable/first_demo1"
  />
  <TextView
	android:id="@+id/Note1"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/Demo1"
  	android:gravity="center_vertical"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/glass_numbers_1"
  	android:text="@string/dialog_first_launch_note1"
  />
  <TextView
	android:id="@+id/Note2"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/Note1"
  	android:gravity="center_vertical"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/glass_numbers_2"
  	android:text="@string/dialog_first_launch_note2"
  />
  <TextView
  	android:id="@+id/Note3"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/Note2"
  	android:gravity="center_vertical"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/glass_numbers_3"
  	android:text="@string/dialog_first_launch_note3"
  />

  <TextView
  	android:id="@+id/Note4"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/Note3"
  	android:gravity="center_vertical"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/glass_numbers_4"
  	android:text="@string/dialog_first_launch_note4"
  />
  <TextView
  	android:id="@+id/Note5"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/Note4"
  	android:gravity="center_vertical"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/glass_numbers_5"
  	android:text="@string/dialog_first_launch_note5"
  />
  <TextView
  	android:id="@+id/Note6"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/Note5"
  	android:layout_marginTop="24dp"
  	android:gravity="center_vertical"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/glass_numbers_0"
  	android:text="@string/dialog_first_launch_note6"
  />
  <TextView
  	android:id="@+id/StatusReloading"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/Note6"
  	android:gravity="center_vertical"
  	android:layout_marginLeft="9dp"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/button_reloading"
  	android:text="@string/dialog_first_launch_status_reloading"
  />
  <TextView
  	android:id="@+id/StatusProgressing"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/StatusReloading"
  	android:gravity="center_vertical"
  	android:layout_marginLeft="9dp"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/button_search_progressing"
  	android:text="@string/dialog_first_launch_status_progressing"
  />
  <TextView
  	android:id="@+id/StatusStarEmpty"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/StatusProgressing"
  	android:gravity="center_vertical"
  	android:layout_marginLeft="9dp"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/button_star_empty"
  	android:text="@string/dialog_first_launch_status_star_empty"
  />
  <TextView
  	android:id="@+id/StatusStarHalf"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/StatusStarEmpty"
  	android:gravity="center_vertical"
  	android:layout_marginLeft="9dp"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/button_star_half"
  	android:text="@string/dialog_first_launch_status_star_half"
  />
  <TextView
  	android:id="@+id/StatusStarFull"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/StatusStarHalf"
  	android:gravity="center_vertical"
  	android:layout_marginLeft="9dp"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/button_star_full"
  	android:text="@string/dialog_first_launch_status_star_full"
  />
  <TextView
  	android:id="@+id/StatusPick"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/StatusStarFull"
  	android:gravity="center_vertical"
  	android:layout_marginLeft="9dp"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/button_pick"
  	android:text="@string/dialog_first_launch_status_pick"
  />
  <TextView
  	android:id="@+id/StatusWarning"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:layout_below="@+id/StatusPick"
  	android:gravity="center_vertical"
  	android:layout_marginLeft="9dp"
  	android:padding="4dp"
  	android:drawableLeft="@drawable/button_warning"
  	android:text="@string/dialog_first_launch_status_warning"
  />
</RelativeLayout>
</ScrollView>